@startuml
'https://plantuml.com/class-diagram

class Context{
    + Context(Strategy strategy):void
    + setStrategy(Strategy strategy):void
    + executeStrategy(AbstractAircraft aircraft):void
}
interface Strategy{
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}
class Straight{
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}
class Scattering{
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}
class Client{}
Client -->Context
Client ..>Straight
Client ..>Scattering
Straight..|>Strategy
Scattering..|>Strategy
Context o-->  Strategy

@enduml